# lint-lab

./: .gitlab-ci.yml  Cargo.toml  rustfmt.toml
src/: gitlab.rs  main.rs  rustfmt.rs
