[package]
name = "lint-lab"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "rust project ci lint utilities primarily for use on gitlab"
repository = "https://github.com/richardscollin/lint-lab"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["/src"]

[dependencies]
cargo-lock     = { version = "9.0.0"                          }
cargo_metadata = { version = "0.18.1"                         }
clap           = { version = "4.5.4",   features = ["derive"] }
serde          = { version = "1.0.198", features = ["derive"] }
serde_json     = { version = "1.0.116"                        }
